--- a/src/styles/components/plans-pricing/plans-pricing-content.css
+++ b/src/styles/components/plans-pricing/plans-pricing-content.css
@@ -61,7 +61,7 @@
 
 .plans-pricing__inner-container-separator {
 	margin: 1em 0;
-	border: 1px solid var(--primary-color-green);
+	border: solid 1px var(--primary-color-green);
 }
 
 .plans-pricing__inner-container-items {
